--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,7 @@
     <body>
        <script src="/js/jquery-migrate-3.0.0.min.js"></script>
        <script src="/js/socket.io-1.3.7.js"></script>
-
-      <script type="text/javascript">
-            var socket = io();
-      </script>
-      wtf
+       <script src="/js/app.js"></script>
+       
     </body>
 </html>
