--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,23 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Socket.io Chat</title>
-    </head>
-    <body>
-        <form id='message-form'>
-            <input type="text" name='message'/>
-            <input type="submit"/>
-        </form>
 
-       <script src="/js/jquery-2.1.4.js"></script>
-       <script src="/js/socket.io-1.3.7.js"></script>
-       <script src="/js/app.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Socket.io Chat</title>
+</head>
+
+<body>
+   <div class="messages">
+       <!-- Messages end up here! -->
+   </div>
+    <form id='message-form'>
+        <input type="text" name='message' />
+        <input type="submit" />
+    </form>
+
+    <script src="/js/jquery-2.1.4.js"></script>
+    <script src="/js/socket.io-1.3.7.js"></script>
+    <script src="/js/app.js"></script>
+</body>
+
 </html>
