--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   <form action="/chat.html">
     <label for="name">Display Name</label>
     <input type="text" name="name">
+    <label for="name">Room</label>
+    <input type="text" name="room">
     <input type="submit" value="Join chat">
   </form>
 </body>
