--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,36 @@
 <head>
   <meta charset="UTF-8">
   <title>Socket.io Chat</title>
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 
 <body>
-  <h1>Join Chat</h1>
-  <form action="/chat.html">
-    <label for="name">Display Name</label>
-    <input type="text" name="name">
-    <label for="name">Room</label>
-    <input type="text" name="room">
-    <input type="submit" value="Join chat">
-  </form>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md4 col-md-offset-4">
+        <h1>Join Chat</h1>
+        <form action="/chat.html">
+          <div class="form-group">
+            <label for="name">Display Name</label>
+            <input type="text" name="name" class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label for="name">Room</label>
+            <input type="text" name="room" class="form-control">
+          </div>
+          <div class="form-group">
+            <input type="submit" value="Join chat" class="btn btn-primary">
+          </div>
+        </form>
+
+      </div>
+
+    </div>
+
+  </div>
+
 </body>
 
 </html>
