--- a/public/chat.html
+++ b/public/chat.html
@@ -4,20 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Socket.io Chat</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <a href="/index.html">Change settings</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-4 well">
+                <a href="/index.html">Change settings</a>
 
-    <h1 class='room-title'></h1>
+                <h1 class='room-title'></h1>
 
-    <div class="messages">
-        <!-- Messages end up here! -->
+                <ul class="messages list-group">
+                    <!-- Messages end up here! -->
+                </ul>
+
+                <form id='message-form'>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-addon">
+                                <span>
+                                    <i class="glyphicon glyphicon-comment"></i>
+                                </span>
+                                <input type="text" name='message' class="form-control" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-default btn-block"/>
+                    </div>
+
+                </form>
+            </div>
+        </div>
     </div>
-    <form id='message-form'>
-        <input type="text" name='message' />
-        <input type="submit" />
-    </form>
+
     <script src="/js/jquery-2.1.4.js"></script>
     <script src="/js/socket.io-1.3.7.js"></script>
     <script src="/js/moment.js"></script>
