--- a/public/index.html
+++ b/public/index.html
@@ -5,46 +5,46 @@
   <meta charset="UTF-8">
   <title>Socket.io Chat</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css">
- <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
   <div class="vertical-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4 well">
-        <h1>Join Chat</h1>
-        <form action="./chat.html">
-          <div class="form-group">
-            <label for="name">Display Name</label>
-            <div class="input-group">
-              <span class="input-group-addon">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4 well">
+          <h1 class="text-center">Join Chat</h1>
+          <form action="./chat.html">
+            <div class="form-group">
+              <label for="name">Display Name</label>
+              <div class="input-group">
+                <span class="input-group-addon">
               <i class="glyphicon glyphicon-user"></i>
              </span>
-              <input type="text" name="name" class="form-control">
+                <input type="text" name="name" class="form-control">
+              </div>
             </div>
-          </div>
 
-          <div class="form-group">
-            <label for="name">Room</label>
-            <div class="input-group">
-              <span class="input-group-addon">
+            <div class="form-group">
+              <label for="name">Room</label>
+              <div class="input-group">
+                <span class="input-group-addon">
                 <i class="glyphicon glyphicon-comment"></i>
               </span>
-              <input type="text" name="room" class="form-control">
-            </div>
+                <input type="text" name="room" class="form-control">
+              </div>
 
-          </div>
-          <div class="form-group">
-            <input type="submit" value="Join chat" class="btn btn-primary btn-block">
-          </div>
-        </form>
+            </div>
+            <div class="form-group">
+              <input type="submit" value="Join chat" class="btn btn-primary btn-block">
+            </div>
+          </form>
+
+        </div>
 
       </div>
 
     </div>
-
-  </div>
   </div>
 
 </body>
